--- a/mail-gateway/src/main/resources/application.yml
+++ b/mail-gateway/src/main/resources/application.yml
@@ -17,6 +17,13 @@ spring:
           filters:
             - RewritePath=/api/?(?<segment>.*),/$\{segment}
 
+        - id: ware_route
+          uri: lb://mail-ware
+          predicates:
+            - Path=/api/ware/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*),/$\{segment}
+
         - id: product_route
           uri: lb://mail-product
           predicates:
