--- a/mail-ware/src/main/resources/application.yml
+++ b/mail-ware/src/main/resources/application.yml
@@ -4,8 +4,16 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.123.198:3306/mail_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.123.198:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+
+
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -16,3 +24,8 @@ mybatis-plus:
 
 server:
   port: 11000
+
+
+logging:
+  level:
+    com.pei: debug
