--- a/mail-product/src/main/resources/application.yml
+++ b/mail-product/src/main/resources/application.yml
@@ -4,16 +4,20 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.123.198:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.121.128:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
 
-
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+  thymeleaf:
+    cache: false
+  redis:
+    host: 192.168.121.128
+    port: 6379
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -26,5 +30,11 @@ mybatis-plus:
 
 server:
   port: 9999
+
+
+logging:
+  level:
+    com.xunqi.gulimall: error
+    com.alibaba.nacos.client.naming: error
 
 
