--- a/mail-gateway/src/main/resources/application.yml
+++ b/mail-gateway/src/main/resources/application.yml
@@ -40,6 +40,12 @@ spring:
             - RewritePath=/api/?(?<segment>.*),/renren-fast/$\{segment}
 
 
+        - id: mail_host_route
+          uri: lb://mail-product
+          predicates:
+            - Host=**.mymail.com
+
+
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
